fix: text overflow hidden

--- a/packages/mercury/src/address/style/index.less
+++ b/packages/mercury/src/address/style/index.less
@@ -38,6 +38,7 @@
         overflow-x: auto;
         overflow-y: hidden;
         height: 40px;
+        font-size: 14px;
         .header-tab {
           min-width: 30px;
           span {
